added for presentation

--- a/views/pages/goals.ejs
+++ b/views/pages/goals.ejs
@@ -23,37 +23,37 @@
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Poids</td>
                             <td><%=utilisateur.info.weight%></td>
-                            <td><%=utilisateur.info.weight%></td>
+                            <td style = "color:var(--highlight-blue);">75</td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Diastole</td>
                             <td><%=utilisateur.info.diastolic%></td>
-                            <td><%=utilisateur.info.diastolic%></td>
+                            <td style = "color:var(--highlight-green);"><%=utilisateur.info.diastolic%></td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Systole</td>
                             <td><%=utilisateur.info.systolic%></td>
-                            <td><%=utilisateur.info.systolic%></td>
+                            <td style = "color:var(--highlight-green);"><%=utilisateur.info.systolic%></td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Attrapage</td>
                             <td><%=utilisateur.info.grip%></td>
-                            <td><%=utilisateur.info.grip%></td>
+                            <td style = "color:var(--highlight-blue);">38</td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Souplesse</td>
                             <td><%=utilisateur.info.sitbend%></td>
-                            <td><%=utilisateur.info.sitbend%></td>
+                            <td style = "color:var(--highlight-yellow);">12</td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
                             <td><%=utilisateur.info.situps%></td>
-                            <td><%=utilisateur.info.situps%></td>
+                            <td style = "color:var(--highlight-yellow);">49</td>
                         </tr>
                         <tr>
                             <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Saut</td>
                             <td><%=utilisateur.info.broadjump%></td>
-                            <td><%=utilisateur.info.broadjump%></td>
+                            <td style = "color:var(--highlight-green);">190</td>
                         </tr>
                     </tbody>
                 </table>
