superbe added goals

--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -62,11 +62,11 @@
                     <%}%>
                     <%if(utilisateur.nbEtape == 1){%>
                         <form id = "login-form" method = "post" action = "/test">
-                            <label for = "diastolic">Pression diastolique (min)</label>
+                            <label for = "diastolic">Pression diastolique (mmHg)</label>
                             <div class = "row-input">
                                 <input id = "diastolic" type = "number" name = "diastolic" placeholder="Exemple : 78" required>
                             </div>
-                            <label for = "systolic">Pression systolique (min)</label>
+                            <label for = "systolic">Pression systolique (mmHg)</label>
                             <div class = "row-input">
                                 <input id = "systolic" type = "number" name = "systolic" placeholder="Exemple : 130" required>
                             </div>
@@ -82,7 +82,7 @@
                         <br>
                         <h2 class = "exercise-desc" style = "color:var(--highlight-yellow);">EXERCICE</h2>
                         <h2 class = "exercise-desc">Placez-vous <span class = "highlight-blue">assis sur le sol </span><span class = "exercise-quicknote">(avec un tapis ou une serviette)</span> et <span class = "highlight-yellow">penchez-vous</span> pour rapprocher vos mains de vos pieds en gardant vos jambes le plus tendu possibles</h2>
-                        <img class = "exercise-img" src = "img/exo1.png">
+                        <!--<img class = "exercise-img" src = "img/exo1.png">-->
                         <h2 class = "exercise-desc"><span class = "highlight-yellow">Mesurez</span> ensuite la <span class = "highlight-blue">distance</span> entre vos mains et vos pieds</h2>
                         <h2 class = "exercise-quicknote">Rappel: Échauffez-vous bien avant de commencer (prenez soin de vous !)</h2>
                         <form id = "login-form" method = "post" action = "/test">
@@ -98,7 +98,7 @@
                         <br>
                         <h2 class = "exercise-desc" style = "color:var(--highlight-yellow);">EXERCICE</h2>
                         <h2 class = "exercise-desc">Placez-vous <span class = "highlight-blue">assis sur le sol </span><span class = "exercise-quicknote">(avec un tapis ou une serviette)</span> et <span class = "highlight-yellow">effectuez</span> des crunches</h2>
-                        <img class = "exercise-img" src = "img/exo2.png">
+                        <!--<img class = "exercise-img" src = "img/exo2.png">-->
                         <h2 class = "exercise-desc"><span class = "highlight-yellow">Comptez</span> votre nombre de <span class = "highlight-blue">crunch fait</span> et <span class = "highlight-yellow">arrêtez</span> quand vous ne vous sentez <span class = "highlight-blue">plus capable</span></h2>
                         <h2 class = "exercise-quicknote">Rappel: Échauffez-vous bien avant de commencer (prenez soin de vous !)</h2>
                         <form id = "login-form" method = "post" action = "/test">
@@ -113,7 +113,7 @@
                         <br>
                         <h2 class = "exercise-desc" style = "color:var(--highlight-yellow);">EXERCICE</h2>
                         <h2 class = "exercise-desc">Placez-vous <span class = "highlight-blue">debout, pieds joints </span><span class = "exercise-quicknote">(avec de l'espace autours de vous) </span> et <span class = "highlight-yellow">sautez</span> le plus loin possible devant vous</h2>
-                        <img class = "exercise-img" src = "img/exo3.png">
+                        <!--<img class = "exercise-img" src = "img/exo3.png">-->
                         <h2 class = "exercise-desc"><span class = "highlight-yellow">Mesurez </span> la <span class = "highlight-blue">distance</span> parcourue entre votre point de départ et celui d'arrivé</h2>
                         <h2 class = "exercise-quicknote">Rappel: Échauffez-vous bien avant de commencer (prenez soin de vous !)</h2>
                         <form id = "login-form" method = "post" action = "/test">
