Fixed goals appeareand of green when supposed to be orange

--- a/views/pages/goals.ejs
+++ b/views/pages/goals.ejs
@@ -79,7 +79,7 @@
                             </tr>
                             <tr>
                                 <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
-                                <%if(utilisateur.info.situps > 40){%>
+                                <%if(utilisateur.info.situps < 40){%>
                                     <td style = "color:var(--highlight-orange);"><%=utilisateur.info.situps%></td>
                                 <%}else{%>
                                     <td style = "color:var(--highlight-green);"><%=utilisateur.info.situps%></td>
@@ -157,7 +157,7 @@
                             </tr>
                             <tr>
                                 <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
-                                <%if(utilisateur.info.situps > 45){%>
+                                <%if(utilisateur.info.situps < 45){%>
                                     <td style = "color:var(--highlight-orange);"><%=utilisateur.info.situps%></td>
                                 <%}else{%>
                                     <td style = "color:var(--highlight-green);"><%=utilisateur.info.situps%></td>
@@ -235,7 +235,7 @@
                             </tr>
                             <tr>
                                 <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
-                                <%if(utilisateur.info.situps > 52){%>
+                                <%if(utilisateur.info.situps < 52){%>
                                     <td style = "color:var(--highlight-orange);"><%=utilisateur.info.situps%></td>
                                 <%}else{%>
                                     <td style = "color:var(--highlight-green);"><%=utilisateur.info.situps%></td>
@@ -313,7 +313,7 @@
                             </tr>
                             <tr>
                                 <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
-                                <%if(utilisateur.info.situps > 58){%>
+                                <%if(utilisateur.info.situps < 58){%>
                                     <td style = "color:var(--highlight-orange);"><%=utilisateur.info.situps%></td>
                                 <%}else{%>
                                     <td style = "color:var(--highlight-green);"><%=utilisateur.info.situps%></td>
